Fixed create team, working on navigation mobile view

--- a/client/main.css
+++ b/client/main.css
@@ -9,6 +9,4 @@
 
 .nav-sidebar {
     background-color: lightgray;
-    height: 100vh;
-    z-index: 1;
 }
